--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "generate": "npx prisma generate"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "@prisma/client": "^4.8.0",
+    "express": "^4.18.2",
+    "prisma": "^4.8.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
