--- a/package.json
+++ b/package.json
@@ -15,11 +15,17 @@
   },
   "dependencies": {
     "@prisma/client": "^4.8.0",
+    "aws-sdk": "^2.1286.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "prisma": "^4.8.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
+    "@types/multer": "^1.4.7",
+    "@types/multer-s3": "^3.0.0",
     "@types/node": "^18.11.18",
     "nodemon": "^2.0.20"
   }
