--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "dependencies": {
     "@prisma/client": "^4.8.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "prisma": "^4.8.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
+    "@types/jsonwebtoken": "^9.0.0",
     "@types/node": "^18.11.18",
     "nodemon": "^2.0.20"
   }
