--- a/package.json
+++ b/package.json
@@ -1,26 +1,36 @@
 {
-  "name": "Pic.me-server",
-  "version": "1.0.0",
-  "description": "pic.me API",
-  "main": "index.js",
-  "repository": "https://github.com/Pic-me-Pic-me/Pic.me-server",
-  "author": "<dragontaek98@naver.com>",
-  "license": "MIT",
-  "scripts": {
-    "dev": "nodemon",
-    "build": "tsc && node dist",
-    "db:pull": "npx prisma db pull",
-    "db:push": "npx prisma db push",
-    "generate": "npx prisma generate"
-  },
-  "dependencies": {
-    "@prisma/client": "^4.8.0",
-    "express": "^4.18.2",
-    "prisma": "^4.8.0"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.15",
-    "@types/node": "^18.11.18",
-    "nodemon": "^2.0.20"
-  }
+    "name": "Pic.me-server",
+    "version": "1.0.0",
+    "description": "pic.me API",
+    "main": "index.js",
+    "repository": "https://github.com/Pic-me-Pic-me/Pic.me-server",
+    "author": "<dragontaek98@naver.com>",
+    "license": "MIT",
+    "scripts": {
+        "dev": "nodemon",
+        "build": "tsc && node dist",
+        "db:pull": "npx prisma db pull",
+        "db:push": "npx prisma db push",
+        "generate": "npx prisma generate",
+        "prepare": "husky install",
+        "greeting": "hello husky!"
+    },
+    "dependencies": {
+        "@prisma/client": "^4.8.0",
+        "express": "^4.18.2",
+        "prisma": "^4.8.0"
+    },
+    "devDependencies": {
+        "@types/express": "^4.17.15",
+        "@types/node": "^18.11.18",
+        "eslint": "^8.31.0",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-airbnb-typescript": "^17.0.0",
+        "eslint-config-prettier": "^8.6.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "nodemon": "^2.0.20",
+        "prettier": "^2.8.1",
+        "husky": "^8.0.0"
+    }
 }
