--- a/package.json
+++ b/package.json
@@ -18,32 +18,32 @@
     "dependencies": {
         "@prisma/client": "^4.8.0",
         "aws-sdk": "^2.1286.0",
+        "axios": "^1.2.2",
+        "bcryptjs": "^2.4.3",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
-        "multer": "^1.4.5-lts.1",
-        "multer-s3": "^3.0.1",
-        "bcryptjs": "^2.4.3",
         "express-validator": "^6.14.2",
         "jsonwebtoken": "^9.0.0",
+        "multer": "^1.4.5-lts.1",
+        "multer-s3": "^3.0.1",
         "prisma": "^4.8.0"
     },
     "devDependencies": {
-        "@types/express": "^4.17.15",
-        "@types/node": "^18.11.18",
         "@types/bcryptjs": "^2.4.2",
         "@types/express": "^4.17.15",
-        "@types/multer": "^1.4.7",
-        "@types/multer-s3": "^3.0.0",
         "@types/express-validator": "^3.0.0",
         "@types/jsonwebtoken": "^9.0.0",
+        "@types/multer": "^1.4.7",
+        "@types/multer-s3": "^3.0.0",
+        "@types/node": "^18.11.18",
         "eslint": "^8.31.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-airbnb-typescript": "^17.0.0",
         "eslint-config-prettier": "^8.6.0",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-prettier": "^4.2.1",
+        "husky": "^8.0.0",
         "nodemon": "^2.0.20",
-        "prettier": "^2.8.1",
-        "husky": "^8.0.0"
+        "prettier": "^2.8.1"
     }
 }
