--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "aws-sdk": "^2.1286.0",
         "axios": "^1.2.2",
         "bcryptjs": "^2.4.3",
+        "dayjs": "^1.11.7",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-validator": "^6.14.2",
