--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     },
     "dependencies": {
         "@prisma/client": "^4.8.0",
+        "@types/cors": "^2.8.13",
         "aws-sdk": "^2.1286.0",
         "axios": "^1.2.2",
         "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
         "dayjs": "^1.11.7",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
