--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
         "jsonwebtoken": "^9.0.0",
         "multer": "^1.4.5-lts.1",
         "multer-s3": "^3.0.1",
-        "prisma": "^4.8.0"
+        "prisma": "^4.8.0",
+        "typescript": "^4.9.4"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.2",
