feat: init TDD, add authPost votePlayerGet test code

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "db:push": "npx prisma db push",
         "generate": "npx prisma generate",
         "prepare": "husky install",
-        "greeting": "hello husky!"
+        "greeting": "hello husky!",
+        "test": "yarn mocha test/**/*.ts -r ts-node/register --exit"
     },
     "dependencies": {
         "@prisma/client": "^4.8.0",
@@ -34,12 +35,16 @@
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.2",
+        "@types/chai": "^4.3.4",
         "@types/express": "^4.17.15",
         "@types/express-validator": "^3.0.0",
         "@types/jsonwebtoken": "^9.0.0",
+        "@types/mocha": "^10.0.1",
         "@types/multer": "^1.4.7",
         "@types/multer-s3": "^3.0.0",
         "@types/node": "^18.11.18",
+        "@types/supertest": "^2.0.12",
+        "chai": "^4.3.7",
         "eslint": "^8.31.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-airbnb-typescript": "^17.0.0",
@@ -47,7 +52,10 @@
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-prettier": "^4.2.1",
         "husky": "^8.0.0",
+        "mocha": "^10.2.0",
         "nodemon": "^2.0.20",
-        "prettier": "^2.8.1"
+        "prettier": "^2.8.1",
+        "supertest": "^6.3.3",
+        "ts-node": "^10.9.1"
     }
 }
