--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "axios": "^1.2.2",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
+        "crypto-js": "^4.1.1",
         "dayjs": "^1.11.7",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
@@ -36,6 +37,7 @@
     "devDependencies": {
         "@types/bcryptjs": "^2.4.2",
         "@types/chai": "^4.3.4",
+        "@types/crypto-js": "^4.1.1",
         "@types/express": "^4.17.15",
         "@types/express-validator": "^3.0.0",
         "@types/jsonwebtoken": "^9.0.0",
