--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "author": "<dragontaek98@naver.com>",
     "license": "MIT",
     "scripts": {
-        "dev": "nodemon",
-        "build": "tsc && node dist",
-        "db:pull": "npx prisma db pull",
-        "db:push": "npx prisma db push",
-        "generate": "npx prisma generate",
-        "prepare": "husky install",
-        "greeting": "hello husky!",
-        "test": "yarn mocha test/**/*.ts -r ts-node/register --exit"
+        "start:dev": "cross-env NODE_ENV=development nodemon",
+        "build:dev": "cross-env NODE_ENV=development tsc && cross-env NODE_ENV=development node dist",
+        "start:prod": "cross-env NODE_ENV=production nodemon",
+        "build:prod": "cross-env NODE_ENV=production tsc && cross-env NODE_ENV=production node dist",
+        "db-pull:dev": "dotenv -e .env.development npx prisma db pull",
+        "db-push:dev": "dotenv -e .env.development npx prisma db push",
+        "generate:dev": "dotenv -e .env.development npx prisma generate",
+        "db-pull:prod": "dotenv -e .env.production npx prisma db pull",
+        "db-push:prod": "dotenv -e .env.production npx prisma db push",
+        "generate:prod": "dotenv -e .env.production npx prisma generate",
+        "test:dev": "yarn mocha test/**/*.ts -r ts-node/register --exit"
     },
     "dependencies": {
         "@prisma/client": "^4.8.0",
@@ -23,9 +26,11 @@
         "axios": "^1.2.2",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
+        "cross-env": "^7.0.3",
         "crypto-js": "^4.1.1",
         "dayjs": "^1.11.7",
         "dotenv": "^16.0.3",
+        "dotenv-cli": "^7.0.0",
         "express": "^4.18.2",
         "express-validator": "^6.14.2",
         "jsonwebtoken": "^9.0.0",
