--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
             # build spring boot project
             - name: build
               working-directory: ./
-              run: yarn run build:prod
+              run: yarn run build
 
             # compress to zip file to upload to S3
             - name: compress files for deploy
