--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -26,7 +26,7 @@ jobs:
               run: touch ./.env.development
               shell: bash
 
-            - name: deliver dev env
+            - name: deliver dev environment
               run: echo "${{ secrets.DEV_ENVIRONMENT }}" > ./.env.development
               shell: bash
 
