--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "aws-sdk": "^2.1286.0",
         "axios": "^1.2.2",
         "bcryptjs": "^2.4.3",
+        "cookie": "^0.5.0",
         "cors": "^2.8.5",
         "cross-env": "^7.0.3",
         "crypto-js": "^4.1.1",
@@ -43,6 +44,7 @@
     "devDependencies": {
         "@types/bcryptjs": "^2.4.2",
         "@types/chai": "^4.3.4",
+        "@types/cookie": "^0.5.1",
         "@types/crypto-js": "^4.1.1",
         "@types/express": "^4.17.15",
         "@types/express-validator": "^3.0.0",
