--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
         "multer": "^1.4.5-lts.1",
         "multer-s3": "^3.0.1",
         "prisma": "^4.8.0",
-        "typescript": "^4.9.4"
+        "typescript": "^4.9.4",
+        "web-push": "^3.6.2"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.2",
@@ -54,6 +55,7 @@
         "@types/multer-s3": "^3.0.0",
         "@types/node": "^18.11.18",
         "@types/supertest": "^2.0.12",
+        "@types/web-push": "^3.3.2",
         "chai": "^4.3.7",
         "eslint": "^8.31.0",
         "eslint-config-airbnb-base": "^15.0.0",
